<resources>
    <string name="app_name">Exmoker</string>
    <string name="str_sim">Sim</string>
    <string name="str_nao">Não</string>
    <string name="str_cigarro">cigarro</string>
    <string name="str_cigarros">cigarros</string>
    <string name="str_finalizar">Finalizar</string>
    <string name="str_dinheiro_poupado">Dinheiro poupado</string>
    <string name="str_cigarros_evitados">Cigarros evitados</string>
    <string name="str_voce_esta">Você está a </string>
    <string name="str_dias_sem_fumar"> dias sem fumar.</string>
    <string name="str_name">Nome</string>
    <string name="str_email">Email</string>
    <string name="str_senha">Senha</string>
    <string name="str_telefone">Telefone</string>
    <string name="str_senha_confirmar">Confirmar senha</string>
    <string name="str_dataNasc">Data de Nascimento</string>
    <string name="pick_date">Selecione a data</string>
    <string name="str_data_nasc_picker">Selecione a data</string>
    <string name="str_btLogar">Entrar</string>
    <string name="str_btLogarGoogle">Entrar com Google</string>
    <string name="str_btCadastrarSe">Cadastrar-se</string>
    <string name="str_btCadastrar">Cadastrar</string>
    <string name="str_btEsqueceuSenha">Esqueceu sua senha?</string>
    <string name="str_btRedefinirSenha">Redefinir Senha</string>
    <string name="str_enviouEmail">Email enviado com sucesso!</string>
    <string name="str_naoEnviouEmail">Email não enviado!</string>
    <string name="str_esqueceu_senha">Esqueceu sua senha?</string>
    <string name="str_logo_description">Logo Exmoker</string>
    <string name="str_cad_contato_apoio">Cadastro contato de apoio</string>
    <string name="str_ou">OU</string>
    <string name="str_confirmar">Confirmar</string>
    <string name="str_cancelar">Cancelar</string>
    <string name="str_ho_menu_option_logout">Sair</string>
    <string name="str_estatisticas">Estatísticas</string>
    <string name="str_estatisticas_nivel_dependencia">Nível de dependência à nicotina</string>
    <string name="str_estatisticas_nivel_dependencia_mbaixa">M.Baixa</string>
    <string name="str_estatisticas_nivel_dependencia_muito_baixa">Muito Baixa</string>
    <string name="str_estatisticas_nivel_dependencia_baixa">Baixa</string>
    <string name="str_estatisticas_nivel_dependencia_mod">Mod.</string>
    <string name="str_estatisticas_nivel_dependencia_moderada">Moderada</string>
    <string name="str_estatisticas_nivel_dependencia_elev">Elev.</string>
    <string name="str_estatisticas_nivel_dependencia_elevada">Elevada</string>
    <string name="str_estatisticas_nivel_dependencia_melev">M.Elev.</string>
    <string name="str_estatisticas_nivel_dependencia_muito_elevada">Muito Elevada</string>
    <string name="str_estatisticas_nivel_dependencia_legendas">
        \n M.Elev.: Muito Elevada
        \n Elev.: Elevada
        \n Mod.: Moderada
        \n Baixa: Baixa
        \n M.Baixa.: Muito Baixa
    </string>
    <string name="str_novo_teste_fargestrom">Realizar o teste novamente</string>
    <string name="str_estatisticas_economia_financeira">Economia financeira</string>
    <string name="str_estatisticas_gatilhos">Gatilhos</string>
    <string name="str_estatistiscas_beneficios_saude">Benefícios à saúde</string>
    <string name="str_secao_informativa">Seção informativa</string>
    <string name="str_menu_home">Home</string>
    <string name="str_menu_conquistas">Conquistas</string>
    <string name="str_menu_estatistica">Estatística</string>
    <string name="str_menu_info">Info</string>
    <string name="str_conquistas">Conquistas</string>
    <string name="str_torne_se_exmoker">Tornou-se um Exmoker</string>
    <string name="str_torne_se_exmoker_descricao">Parabéns pela iniciativa de tornar-se um Exmoker.</string>
    <string name="str_sete_dia_sem_cigarro">Sete dias sem fumar!</string>
    <string name="str_sete_dia_sem_cigarro_descricao">Fique sete dias consecutivos sem fumar.</string>
    <string name="str_escolher_metodo">Escolher método de parada</string>
    <string name="str_parada_imediata">Parada Imediata</string>
    <string name="str_parada_imediata_descricao">Pare imediatamente com o uso do cigarro e mantenha-se longe dos malefícios causados pelo tabagismo.</string>
    <string name="str_parada_gradual">Parada Gradual</string>
    <string name="str_parada_gradual_descricao">Diminua sua quantidade de cigarros consumidos diariamente até atingir a meta de zero cigarros</string>
    <string name="str_parada_gradual_descricao_em">em</string>
    <string name="str_informacoes_adicionais">Informações adicionais</string>
    <string name="str_qtd_cigarros_no_maco">Quantos cigarros possui o maço?</string>
    <string name="str_cigarros_no_maco">cigarros no maço</string>
    <string name="str_barra">/</string>
    <string name="str_qtd_cigarros_no_maco_invalido">A quantidade precisa ser maior que 0</string>
    <string name="str_mes">Mês</string>
    <string name="str_ano">Ano</string>
    <string name="str_data_inicio_tabagismo">Quando começou a fumar?</string>
    <string name="str_data_invalida">A data precisa estar no passado</string>
    <string name="str_resultado_informacoes">Benefícios financeiros ao parar de fumar</string>
    <string name="str_dinheiro_gasto_total">Estimativa de gastos com o cigarro até tornar-se Exmoker:</string>
    <string name="str_estimativa_dinheiro_poupado">Estimativa de dinheiro poupado:</string>
    <string name="str_dinheiro_gasto_diario">Estimativa de economia diária:</string>
    <string name="str_dinheiro_gasto_semanal">Estimativa de economia semanal:</string>
    <string name="str_dinheiro_gasto_mensal">Estimativa de economia mensal:</string>
    <string name="str_dinheiro_gasto_anual">Estimativa de economia anual:</string>
    <string name="str_pergunta_intensidade">Quão intensa é a sua vontade de fumar?</string>
    <string name="str_muito_baixa">Muito baixa</string>
    <string name="str_baixa">Baixa</string>
    <string name="str_media">Média</string>
    <string name="str_alta">Alta</string>
    <string name="str_muito_alta">Muito alta</string>
    <string name="str_gatilhos_questao">Selecione um ou mais gatilhos</string>
    <string name="str_nervosismo">Nervosismo</string>
    <string name="str_convivio_fumantes">Convívio com fumantes</string>
    <string name="str_aumento_alimentacao">Aumento do consumo alimentar</string>
    <string name="str_sintomas_abstinencia">Sintomas da abstinência</string>
    <string name="str_gatilhos_maior_zero">Precisa selecionar algum gatilho</string>
    <string name="str_relatorio_gatilhos">Relatório de gatilhos</string>
    <string name="str_frequencia_gatilhos">Frequência dos Gatilhos</string>
    <string name="str_frequencia_local">Frequência dos Locais</string>
    <string name="str_intensidade_vontade">Intensidade da vontade de fumar</string>
    <string name="str_intensidade_descricao">1 - Muito baixa
    \n2 - Baixa
    \n3 - Média
    \n4 - Alta
    \n5 - Muito alta</string>
    <string name="str_local_gatilho">Qual o local que ocorreu a vontade de fumar?</string>
    <string name="str_escola">Escola</string>
    <string name="str_trabalho">Trabalho</string>
    <string name="str_casa">Casa</string>
    <string name="str_festa">Festa</string>
    <string name="str_outro">Outro</string>
    <string name="str_local_selecionar_um">Precisa selecionar um local</string>
    <string name="str_valor_maco_cigarro">Inserir o valor do maço do cigarro</string>
    <string name="str_valor_maco_cigarro_invalido">O valor precisa ser maior que 0</string>
    <string name="str_confirmar_valor">Confirmar valor</string>
    <string name="str_simbolo_moeda">R$</string>
    <string name="str_virgula_moeda">,</string>
    <string name="str_valor_dezena">00</string>
    <string name="str_valor_centavo">00</string>
    <string name="str_questionario_gatilho">Identificando gatilhos</string>
    <string name="str_questionario_gatilho_questao1">, você teve uma recaída?</string>
    <string name="str_questionario_gatilho_questao1_comp">Quanto cigarros fumou?</string>
    <string name="str_preciso_ajuda">Botão de ajuda</string>
    <string name="str_preciso_ajuda_ligar_para">Ligar para</string>
    <string name="str_preciso_ajuda_ligacao_apoio">Contato de apoio</string>
    <string name="str_preciso_ajuda_identificar_gatilhos">Identificar gatilhos</string>
    <string name="str_preciso_ajuda_permissao_ligacao">Aceite a permissão para realizar a ligação</string>
    <string name="str_teste_fargestrom">Teste de Fargeström</string>
    <string name="str_cigarros_por_dia">cigarros por dia</string>
    <string name="str_proxima_questao">Próxima</string>
    <string name="str_quantidade_cigarros">00</string>
    <string name="str_ver_resultado_teste">Ver resultado</string>
    <string name="str_subtitulo_teste_fargestrom">Por favor responda as questões abaixo</string>
    <string name="str_fargestrom_questao1">Quanto tempo após acordar você fuma seu primeiro cigarro?</string>
    <string name="str_fargestrom_questao1_resposta1">Nos primeiros 5 minutos</string>
    <string name="str_fargestrom_questao1_resposta2">De 6 a 30 minutos</string>
    <string name="str_fargestrom_questao1_resposta3">De 31 a 60 minutos</string>
    <string name="str_fargestrom_questao1_resposta4">Mais de 60 minutos</string>
    <string name="str_fargestrom_questao2">Você acha difícil não fumar em lugares proibidos?</string>
    <string name="str_fargestrom_questao2_resposta1">Sim</string>
    <string name="str_fargestrom_questao2_resposta2">Não</string>
    <string name="str_fargestrom_questao3">Qual o cigarro do dia que traz mais satisfação?</string>
    <string name="str_fargestrom_questao3_resposta1">O 1° da manhã</string>
    <string name="str_fargestrom_questao3_resposta2">Os outros</string>
    <string name="str_fargestrom_questao4">Quantos cigarros você fuma por dia?</string>
    <string name="str_fargestrom_questao4_resposta1">Menos de 10</string>
    <string name="str_fargestrom_questao4_resposta2">11-20</string>
    <string name="str_fargestrom_questao4_resposta3">21-30</string>
    <string name="str_fargestrom_questao4_resposta4">Mais de 31</string>
    <string name="str_fargestrom_questao5">Você fuma mais frequentemente pela manhã?</string>
    <string name="str_fargestrom_questao5_resposta1">Sim</string>
    <string name="str_fargestrom_questao5_resposta2">Não</string>
    <string name="str_fargestrom_questao6">Você fuma mesmo doente, quando precisa ficar camado a maior parte do tempo?</string>
    <string name="str_fargestrom_questao6_resposta1">Sim</string>
    <string name="str_fargestrom_questao6_resposta2">Não</string>
    <string name="str_resultado_fargestrom">Nível de dependência à nicotina</string>
    <string name="str_resultado_avancar">Avançar</string>
    <string name="str_nivel_dependencia_muito_baixa">DEPENDÊNCIA MUITO BAIXA</string>
    <string name="str_nivel_dependencia_baixa">DEPENDÊNCIA BAIXA</string>
    <string name="str_nivel_dependencia_media">DEPENDÊNCIA MÉDIA</string>
    <string name="str_nivel_dependencia_elevada">DEPENDÊNCIA ELEVADA</string>
    <string name="str_nivel_dependencia_muito_elevada">DEPENDÊNCIA MUITO ELEVADA</string>
    <string name="str_subtitle_baixa_dependencia">\nVocê apresentará sintomas da abstinência mais leves ao cessar  com o uso do cigarro.</string>
    <string name="str_subtitle_media_dependencia">\nVocê apresentará sintomas da abstinência moderados ao cessar com o uso do cigarro.</string>
    <string name="str_subtitle_alta_dependencia">\nVocê apresentará sintomas da abstinência mais intensos ao cessar com o uso do cigarro.</string>
    <string name="str_doencas_content">
\n
● Câncer de pulmão\n
● Câncer de laringe\n
● Câncer de faringe\n
● Leucemia\n
● Infarto\n
● Aneurisma\n
● Impotência sexual no homem\n
● Infertilidade na mulher\n
● Entre outras doenças
    </string>
    <string name="str_recomendacao">Recomenda-se a busca por ajuda médica.</string>
</resources>