<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/btb_home"
        android:contentDescription="@string/str_menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/str_menu_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/btb_achievement"
        android:contentDescription="@string/str_menu_conquistas"
        android:icon="@drawable/ic_badge"
        android:title="@string/str_menu_conquistas"
        app:showAsAction="always" />
    <item
        android:id="@+id/itemEmpty"
        android:checkable="false"
        android:title="" />
    <item
        android:id="@+id/btb_chart"
        android:contentDescription="@string/str_menu_estatistica"
        android:icon="@drawable/ic_bar_chart"
        android:title="@string/str_menu_estatistica"
        app:showAsAction="always" />
    <item
        android:id="@+id/btb_info"
        android:contentDescription="@string/str_menu_info"
        android:icon="@drawable/ic_info"
        android:title="@string/str_menu_info"
        app:showAsAction="always" />

</menu>