<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/str_logo_description"
                android:src="@drawable/logo_exmoker" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_txt_email"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_email"
                app:startIconDrawable="@android:drawable/sym_action_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_txt_senha"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_senha"
                app:startIconDrawable="@android:drawable/ic_lock_idle_lock"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_et_senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_bt_logar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_btLogar"
                app:cornerRadius="@dimen/border_radius_input" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:translationY="18dp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/str_ou"
                    android:textColor="@color/white" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:translationY="18dp" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_bt_logar_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_btLogarGoogle"
                app:cornerRadius="@dimen/border_radius_input"
                app:icon="@drawable/ic_logo_google"
                app:iconSize="20dp"
                app:iconTint="@null" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_bt_cadastrar"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_btCadastrar"
                app:cornerRadius="@dimen/border_radius_input" />

            <View
                android:id="@+id/divider"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_bt_esqueceu_senha"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_btEsqueceuSenha"
                app:cornerRadius="@dimen/border_radius_input" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>