<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroContatoApoioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:id="@+id/textView4"
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_cad_contato_apoio" />

        </LinearLayout>

        <View
            android:id="@+id/cad_ca_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cad_ca_txt_nome"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cad_ca_et_nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cad_ca_telefone"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_telefone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cad_ca_et_telefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cad_ca_bt_cadastrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_btCadastrar"
                app:cornerRadius="@dimen/border_radius_input" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>